# libelf

./: config.h.in.meson  meson.build  readme.txt  upstream.wrap
lib/: sys_elf.h.in.meson
libelf/: meson.build
